# FileIndex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TC-mingw-x86_64.cmake  file_storing.md  optimizations.md  prepare_tests.sh
Indexer/: CMakeLists.txt
Indexer/include/: indexer.h  indexerError.h
Indexer/src/: indexer.cpp
Indexer/src/indexer/: clear.cpp  index.cpp  indexer.cpp  isDirectory.cpp  isSymlink.cpp  iterate.cpp
Indexer/src/indexerError/: indexerError.cpp
cliapp/: CMakeLists.txt
cliapp/include/: config.h
cliapp/src/: main.cpp
cliapp/src/config/: applyConfig.cpp  parseFromCLI.cpp
fileindex/: CMakeLists.txt
fileindex/include/: crate.h  dArray.h  fileIndex.h  fileIndexOld.h  fs.h  fsCrate.h  fstypes.h  namesDB.h  sql.h
fileindex/src/fileIndex/: add.cpp  cbFSEntryIndexed.cpp  clean.cpp  db_add_entry.cpp  fileIndex.cpp  getSet.cpp  index.cpp  index_blind.cpp  optimizeDB.cpp  optimizeDuplicates.cpp
fileindex/src/fileIndexOld/: clean.cpp  fileIndex.cpp  getSet.cpp  index.cpp  index_blind.cpp  optimizeDB.cpp  optimizeDuplicates.cpp  searchAll.cpp
fileindex/src/fs/: add.cpp  createTables.cpp  expand.cpp  exportFS.cpp  fs.cpp  getEntry.cpp  getEntryByID.cpp  getEntryPath.cpp  getPath.cpp  getRoots.cpp  getSet.cpp  importFS.cpp  remove.cpp  search.cpp
fileindex/src/fsCrate/: fsCrate.cpp
fileindex/src/fstypes/: fsclasses.cpp  fstypes.cpp
fileindex/src/namesDB/: add.cpp  clean.cpp  expand.cpp  getDBEntry.cpp  getEntry.cpp  getName.cpp  getSet.cpp  namesDB.cpp  searchFirst.cpp
fileindex/src/sql/: exec.cpp  getError.cpp  load_save.cpp  sql.cpp
fileindex/tests/: CMakeLists.txt
fileindex/tests/test_main/: main.cpp
fileindex/tests/tests/FileIndex/: t_fileIndex.h
fileindex/tests/tests/FileIndex/src/: tCBFSEntryIndexed.cpp  tFSStructs.cpp  tFileIndex.cpp  tIndex.cpp
fileindex/tests/tests/NamesDB/src/: tSearchFirst.cpp
fileindex/tests/tests/NamesDB_Stress/src/: t_s_searchFirst.cpp
fs/: CMakeLists.txt
fs/include/: directory.h  file.h  filesystem.h  fs.h  fsEntry.h  fsError.h  fs_entry.h  fs_entry_list.h  fs_name.h  namesDB.h
fs/src/directory/: addEntry.cpp  directory.cpp  getSet.cpp  printRecursiveEntries.cpp
fs/src/file/: file.cpp  getSet.cpp
fs/src/filesystem/: createEntry.cpp  createName.cpp  filesystem.cpp  getName.cpp  getSet.cpp  index.cpp  is.cpp  printIndex.cpp
fs/src/fs/: createEntry.cpp  fs.cpp  getName.cpp  getNamePtr.cpp  getParent.cpp  getPath.cpp  getPathString.cpp  getPathTo.cpp  getRoot.cpp  getSet.cpp  index.cpp  is.cpp  newEntry.cpp
fs/src/fs_entry/: fs_entry.cpp  getParents.cpp  getPathTo.cpp  getSet.cpp
fs/src/fs_entry_list/: addEntry.cpp  fs_entry_list.cpp  reallocate.cpp
fs/src/fserror/: fsError.cpp
fs/src/namesDB/: createName.cpp  expand.cpp  namesDB.cpp
include/: debug.h  error.h  fileIndex.h  fileindex.h  fsCrate.h  fstypes.h  namesDB.h
indexParser/: CMakeLists.txt
indexParser/include/: indexparser.h
src/: main.cpp  mainwindow.cpp
src/debug/: debug.cpp
src/fileIndex/: fileIndex.cpp  index.cpp
src/fsCrate/: fsCrate.cpp
src/namesDB/: add.cpp  clean.cpp  expand.cpp  get.cpp  getDBEntry.cpp  getEntry.cpp  getName.cpp  namesDB.cpp  searchFirst.cpp
src/namesDB/debug/: debug.cpp
tests/: CMakeLists.txt
tests/include/: fails.h
tests/test_main/: main.cpp
tests/tests/FileIndex/: CMakeLists.txt  t_fileIndex.h
tests/tests/NamesDB/: t_namesDB.h
tests/tests/NamesDB/src/: tAdd.cpp  tClean.cpp  tExpand.cpp  tGet.cpp  tNamesDB.cpp  tSearchFirst.cpp
tests/tests/NamesDB_Stress/src/: t_s_searchFirst.cpp
tests/tests/Template/: CMakeLists.txt
tests/tests/Template/src/: t.cpp
ui/: mainwindow.ui
